# Cosine_Distance

./: CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
file_generator/include/: file_generator.h  file_genetator.h
file_generator/sources/: file_generator.c
neutral_functions/include/: neutral_functions.h
neutral_functions/sources/: neutral_functions.c
parallel/: parallel.c
results/: output.txt  result.txt
single/: single.c
single/include/: cos_distance.h
single/sources/: cos_distance.c
tests/: test_dynamic.cpp  test_static.cpp
